[package]
name = "tetrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.30.0"

[features]
# Below, *sdl2* is that crate where there's a features we'd like to enable
# and *image* is the feature we'd like to enable.
default = ["sdl2/image"]